# twitch-bot

./: Cargo.toml  README.md  example.config.yaml
crates/macros/: Cargo.toml
crates/macros-core/: Cargo.toml
crates/macros-core/src/: errors.rs  lib.rs
crates/macros/src/: lib.rs
crates/twitch-bot/: Cargo.toml
crates/twitch-bot/src/: bootstrap.rs  main.rs
crates/twitch-bot/src/adapters/: mod.rs
crates/twitch-bot/src/adapters/system/: mod.rs  playerctl_now_playing.rs  playerctl_skip.rs
crates/twitch-bot/src/adapters/twitch/: chat_sink.rs  eventsub_source.rs  mapper.rs  mod.rs
crates/twitch-bot/src/app/: command.rs  command_parser.rs  dispatcher.rs  mod.rs
crates/twitch-bot/src/app/command/: invocation.rs  mod.rs  name.rs  parser.rs
crates/twitch-bot/src/app/dispatch/: chat_router.rs  command_router.rs  event_router.rs  mod.rs  projector.rs  reward_router.rs  route.rs  traits.rs
crates/twitch-bot/src/app/dispatch/request/: chat.rs  mod.rs  reward.rs  system.rs
crates/twitch-bot/src/app/handlers/: mod.rs  music.rs  plain_message.rs  system.rs
crates/twitch-bot/src/app/handlers/commands/: mod.rs  music.rs  skip.rs  unknown.rs
crates/twitch-bot/src/app/handlers/rewards/: mod.rs  reward_redemption.rs
crates/twitch-bot/src/app/ports/: event_source.rs  message_sink.rs  mod.rs  now_playing.rs
crates/twitch-bot/src/config/: error.rs  loader.rs  mod.rs  validate.rs
crates/twitch-bot/src/core/: app.rs  mod.rs  signal.rs
crates/twitch-bot/src/domain/: command_executor.rs  consumer.rs  errors.rs  fetcher.rs  mod.rs  models.rs  sender.rs
crates/twitch-bot/src/infra/: config.rs  mod.rs  signal.rs
crates/twitch-bot/src/infra/command_executor/: command_executor.rs
crates/twitch-bot/src/infra/config/: loader.rs  models.rs
crates/twitch-bot/src/infra/consumer/: consumer.rs  mod.rs
crates/twitch-bot/src/infra/consumer/router/: mod.rs  router.rs
crates/twitch-bot/src/infra/consumer/router/base_router/: mod.rs
crates/twitch-bot/src/infra/consumer/router/handlers/: command_handler.rs  message_handler.rs  mod.rs
crates/twitch-bot/src/infra/consumer/router/middleware/: auth_middleware.rs
crates/twitch-bot/src/infra/fetchers/: mod.rs  twitch_adapter.rs
crates/twitch-bot/src/infra/sender/: mod.rs  twitch_sender.rs
crates/twitch-bot/src/model/: chat_target.rs  event.rs  ids.rs  mod.rs  role.rs  track.rs  user.rs
crates/twitch-bot/src/runtime/: consumer.rs  logging.rs  mod.rs  shutdown.rs  signal.rs  supervisor.rs
crates/twitch-sdk/: Cargo.toml
crates/twitch-sdk/src/: auth.rs  lib.rs  types.rs
crates/twitch-sdk/src/auth/: mod.rs  token_manager.rs
crates/twitch-sdk/src/chat/: auth.rs  client_credentials_auth.rs  errors.rs  helix_types.rs  mod.rs  sender.rs  traits.rs
crates/twitch-sdk/src/eventsub/: client.rs  mod.rs  types.rs
crates/twitch-sdk/src/irc/: client.rs  mod.rs  parser.rs
crates/twitch-sdk/src/model/: event.rs  mod.rs  role.rs  target.rs  user.rs
crates/twitch-sdk/tests/: irc_client_tests.rs
docs/architecture/: event-pipeline.mmd
src/: main.rs
src/core/: app.rs
src/domain/: consumer.rs  fetcher.rs  mod.rs  models.rs  signal.rs
src/infra/: config.rs  logging.rs  mod.rs  signal.rs
src/infra/consumer/: consumer.rs  mod.rs
src/infra/fetchers/: eventsub_fetcher.rs  irc_fetcher.rs  mod.rs  (+3 more)
(+6 files in other folders)
