[package]
name = "twitch-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dotenv = "0.15"
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
