[package]
name = "twitch-sdk"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-support = []

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
twitch-sdk = { path = ".", features = ["test-support"] }
